# simulink-rs

./: Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
simulink_rs/: all.html  index.html  macro.build_controller!.html  macro.build_controller.html  macro.build_inputs!.html  macro.build_inputs.html  macro.build_outputs!.html  macro.build_outputs.html  macro.import_simulink!.html  macro.import_simulink.html  sidebar-items.js  trait.Simulink.html
src/: lib.rs  model.rs
src/model/: simulink.rs
src/model/simulink/: deserialize.rs  serialize.rs
src/simulink_rs/: lib.rs.html
template/: Cargo.toml  README.md  build.rs
template/src/: lib.rs
tests/: simserde.rs
tests/wrapper/: M1SA_Control_OA.h  main.rs
