[package]
name = "simulink-rs"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Simulink C to Rust library builder"
repository = "https://github.com/rconan/simulink-binder"
documentation = "https://docs.rs/simulink-binder"
readme = "README.md"

[dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
regex = "1.7.1"
