[package]
name = "simulink-rs"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "Simulink C to Rust library builder"
repository = "https://github.com/rconan/simulink-rs"
documentation = "https://docs.rs/simulink-rs"
readme = "README.md"

[dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
regex = "1.7.1"
