[package]
name = "simulink-rs"
version = "4.0.2"
edition = "2021"
license = "MIT"
description = "Simulink C to Rust library builder"
repository = "https://github.com/rconan/simulink-rs"
documentation = "https://docs.rs/simulink-rs"
readme = "README.md"

[dependencies]
bindgen = "0.69.4"
cc = "1.0.79"
regex = "1.7.1"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.114"
